# place_folder

./: Cargo.toml  README.md
etc/: run.sh
src/: cli.rs  config.rs  core.rs  main.rs
