[package]
name = "place_folder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
dirs = "5.0.0"
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
colored = "3.0.0"
